base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwi-web
spec:
  selector:
    deployment: kiwi-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
