base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pdc-ingress
spec:
  rules:
  - host: kiwi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiwi-web
            port:
              number: 80
